CHANGELOG
=========
+-----------------------+
| VERSION: 0.6.0RC3     |
+-----------------------+
BUGFIXES
27-05-06    Fixed prob where environment data was not being saved correctly in PHP4
27-05-06    Logging debug level set correctly by default
26-05-06    Some error messages were being lost with incorrect redirects, now fixed.
26-05-06    Export rss filter chain descriptor modified in php.ini to be compatible
            with php4
09-05-06    Authentication and authorisation improved
07-05-06    Improved regex for detecting PHP CGI installs, php_sapi_name also
            returns apache2filter for CGI installs which is now detected (Mehdi Radgohar)
05-05-06    Added missing en.js file that caused TinyFCK to fail on some platforms
            (Ed Lea)
05-05-06    CLI invocation fixed, see
            http://trac.seagullproject.org/wiki/Howto/WorkingWithCliOrHttpRequests
04-05-06    Fixed bug where array internal pointer was not set for module list,
            caused SectionMgr to fail to list modules
03-05-06    Fixed cmdline installer, envRebuild.php
01-05-06    Installer password was wiped doing a rebuild, now fixed (Julien Casanova)

IMPROVEMENTS
27-05-06    Factored out recording of login to Login observer
26-05-06    Update of OCI related schema/data (Marco)
26-05-06    Implemented ability to do single sign on:
            http://trac.seagullproject.org/wiki/Integration/SingleSignOn
26-05-06    RegistrationMgr::_cmd_insert() now gets id for new user, can be used
            for more interesting thank you screen
22-05-06    Params can now be passed after URI aliases (Andrey Podshivalov) for
            patch, (Davert) for unit test
22-05-06    Added lang switcher to new theme (Julien Casanova)
22-05-06    OCI schema and data now up to date (Ben)
22-05-06    Added ability to call makeUrl() from JavaScript (Miha Vrhovnik), see
            http://trac.seagullproject.org/wiki/Howto/UriManagement#GeneratingURIsinJavaScript