@@ -6,7 +6,15 @@
  * @author James Floyd <jgfloyd@btinternet.com>
  */
 
-require_once dirname(__FILE__)  . '/../../lib/SGL/FrontController.php';
+$rootDir = dirname(__FILE__) . '/../..';
+$varDir = dirname(__FILE__) . '/../../var';
+
+//  check for lib cache
+define('SGL_CACHE_LIBS', (is_file($varDir . '/ENABLE_LIBCACHE.txt'))
+    ? true
+    : false);
+
+require_once $rootDir .'/lib/SGL/FrontController.php';
 SGL_FrontController::init();
 
 require_once 'XML/RPC/Server.php';
