@@ -4,6 +4,7 @@ CHANGELOG
 | VERSION: 0.6.0RC3     |
 +-----------------------+
 BUGFIXES
+28-05-06    Fixed paths for RPC server
 27-05-06    Fixed prob where environment data was not being saved correctly in PHP4
 27-05-06    Logging debug level set correctly by default
 26-05-06    Some error messages were being lost with incorrect redirects, now fixed.
